Implemented Mail Service using nodemailer

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGO_URL=mongodb://localhost:27017/vaccinationDB
 PORT=5000
 SECRET=randomSecureLocalSecret123!
+gmailUser = yourEmail
+gmailPassword = yourpassword
